[package]
name = "neurocurvecalibration"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.13", features = ["dynamic_linking"] } # Use the latest Bevy version you prefer
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0" # For outputting results as JSON
chrono = { version = "0.4", features = ["serde"] } # If timestamps are needed

# Optional: Enable optimizations for release builds
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1